; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_video.c_libvlc_video_take_snapshot.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_video.c_libvlc_video_take_snapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"snapshot-width\00", align 1
@VLC_VAR_INTEGER = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"snapshot-height\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"snapshot-path\00", align 1
@VLC_VAR_STRING = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [16 x i8] c"snapshot-format\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"png\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"video-snapshot\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libvlc_video_take_snapshot(i32* %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i8*, i8** %9, align 8
  %14 = call i32 @assert(i8* %13)
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32* @GetVout(i32* %15, i32 %16)
  store i32* %17, i32** %12, align 8
  %18 = load i32*, i32** %12, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %49

21:                                               ; preds = %5
  %22 = load i32*, i32** %12, align 8
  %23 = load i32, i32* @VLC_VAR_INTEGER, align 4
  %24 = call i32 @var_Create(i32* %22, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = load i32*, i32** %12, align 8
  %26 = load i32, i32* %10, align 4
  %27 = call i32 @var_SetInteger(i32* %25, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %26)
  %28 = load i32*, i32** %12, align 8
  %29 = load i32, i32* @VLC_VAR_INTEGER, align 4
  %30 = call i32 @var_Create(i32* %28, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %29)
  %31 = load i32*, i32** %12, align 8
  %32 = load i32, i32* %11, align 4
  %33 = call i32 @var_SetInteger(i32* %31, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %32)
  %34 = load i32*, i32** %12, align 8
  %35 = load i32, i32* @VLC_VAR_STRING, align 4
  %36 = call i32 @var_Create(i32* %34, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i32 %35)
  %37 = load i32*, i32** %12, align 8
  %38 = load i8*, i8** %9, align 8
  %39 = call i32 @var_SetString(i32* %37, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i8* %38)
  %40 = load i32*, i32** %12, align 8
  %41 = load i32, i32* @VLC_VAR_STRING, align 4
  %42 = call i32 @var_Create(i32* %40, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i32 %41)
  %43 = load i32*, i32** %12, align 8
  %44 = call i32 @var_SetString(i32* %43, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0))
  %45 = load i32*, i32** %12, align 8
  %46 = call i32 @var_TriggerCallback(i32* %45, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0))
  %47 = load i32*, i32** %12, align 8
  %48 = call i32 @vout_Release(i32* %47)
  store i32 0, i32* %6, align 4
  br label %49

49:                                               ; preds = %21, %20
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32* @GetVout(i32*, i32) #1

declare dso_local i32 @var_Create(i32*, i8*, i32) #1

declare dso_local i32 @var_SetInteger(i32*, i8*, i32) #1

declare dso_local i32 @var_SetString(i32*, i8*, i8*) #1

declare dso_local i32 @var_TriggerCallback(i32*, i8*) #1

declare dso_local i32 @vout_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
